# docuFetch_graph

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/agent-memory/orchestrator/: MEMORY.md  feedback_parallel-worker-file-ownership.md  feedback_worker-verification-discipline.md  project_docufetch-frontend-status.md
.claude/agent-memory/pm-loop/: MEMORY.md  backend_test_suite_patterns.md  cross_scope_dependency_pinning.md  design_skill_annotation_pattern.md  grill_doc_first_source_of_truth.md  issues_creator_autonomous_mode.md  project_docs_conventions.md  resuming_deferred_pm_loop_steps.md
.claude/agent-memory/worker/: MEMORY.md  project_frontend_folder_input.md  (+3 more)
backend/: config.py  main.py
backend/api/: browse_routes.py  config_routes.py  graph_routes.py  upload_routes.py
backend/chat_session/: __init__.py
backend/clients/: anthropic_client.py  openrouter_client.py
backend/concurrency/: lock.py
backend/entity_resolution/: resolver.py
backend/ingestion/: hash_store.py  loaders.py  pipeline.py  startup.py  watcher.py
backend/retrieval/: seed.py
backend/vector_store/: store.py
docs/backend/: backend_TASKS.md  backend_context.md  orchestrator_plan.md
docs/frontend/: context.md  features.md  frontend_TASKS.md  frontend_context.md  grill_doc_roadmap.md  issues.md  orchestrator_plan.md  prd.md  tasks.md  tests.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: setup.ts
(+293 files in other folders)
