[project]
name = "docufetch-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "networkx",
    "python-dotenv",
    "openai",
    "anthropic",
    "chromadb",
    "pdfplumber",
    "fpdf2",
    "watchdog",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
